--- a/src/index.css
+++ b/src/index.css
@@ -396,905 +396,7 @@ height: 750px;
   background-color: #004494;
 }
 
-/* Responsividade para iPad Mini (768x1025) */
-@media screen and (min-width: 706px) and (max-width: 768px) {
-  body, html {
-    background: linear-gradient(to bottom, #192627, #004aad); 
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -2;
-  }
 
-  .center {
-    position: relative;
-    bottom: 70px;
-    width: 700px;
-    height: 870px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    left: 0;
-  }
-
-  @property --angle {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-  }
-
-  .center::after, .center::before {
-    content: '';
-    position: absolute;
-    width: 705px;
-    height: 875px;
-    background-image: conic-gradient(from var(--angle), transparent 90%, white);
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 15px;
-    border-radius: 20px;
-    animation: 3s spin linear infinite;
-  }
-
-  .center::before {
-    filter: blur(1.5rem);
-    opacity: 0.5;
-  }
-
-  @keyframes spin {
-    from {
-      --angle: 0deg;
-    }
-    to {
-      --angle: 360deg;
-    }
-  }
-
-  .navbar {
-    padding: 10px;
-    flex-direction: row;
-    border-radius: 20px;
-  }
-
-  .accordion {
-    font-size: 18px;
-    padding: 15px;
-  }
-
-  .content {
-    font-size: 18px;
-    padding: 20px;
-  }
-
-  .row {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .col {
-    margin-bottom: 25px;
-    width: 100%;
-  }
-
-  .home-leftSide h3 {
-    font-size: 24px;
-  }
-
-  .home-leftSide button {
-    padding: 15px 30px;
-    font-size: 20px;
-  }
-
-  .home-rightSide {
-    height: auto;
-    width: 100%;
-  }
-
-  .experiencia, .certificates {
-    padding: 30px;
-    overflow-y: auto;
-    max-height: 75vh;
-  }
-
-  .expin, .certificates div {
-    padding: 30px 25px 25px 30px;
-  }
-
-  .infinite-scroll {
-    overflow: hidden;
-    width: 100%;
-  }
-  
-  .infinite-scroll .row {
-    display: flex;
-    width: calc(10 * 100px); /* Ajuste baseado no número de itens e sua largura */
-    animation: scroll 20s linear infinite; /* Ajuste a duração da animação */
-  }
-  
-  .infinite-scroll .row-reverse {
-    display: flex;
-    width: calc(10 * 100px); /* Ajuste baseado no número de itens e sua largura */
-    animation: scroll-reverse 20s linear infinite; /* Animação da direita para esquerda */
-  }
-  
-  .infinite-scroll .col {
-    flex: 0 0 auto;
-    width: 100px; /* Largura de cada item */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  @keyframes scroll {
-    from {
-      transform: translateX(0); /* Começa do início */
-    }
-    to {
-      transform: translateX(calc(-100%)); /* Role por toda a largura */
-    }
-  }
-  
-  @keyframes scroll-reverse {
-    from {
-      transform: translateX(calc(-100%)); /* Começa no final */
-    }
-    to {
-      transform: translateX(0); /* Role de volta para o início */
-    }
-  }
-  
-  .p1 {
-    overflow-x: auto;
-    overflow-y: auto !important;
-  }
-
-  .projetos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-    padding: 15px;
-    box-sizing: border-box;
-  }
-
-  .projetos > div {
-    width: 100%;
-    margin-bottom: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
-  }
-
-  .projetos img {
-    width: 100%;
-    max-height: 350px;
-    object-fit: cover;
-    border-radius: 20px;
-  }
-
-  .projetos span {
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-  }
-
-  .projetos button {
-    padding: 15px 30px;
-    font-size: 20px;
-    margin-top: 15px;
-  }
-
-  .profilePhoto {
-    position: relative;
-    width: 100%;
-    height: auto;
-    border-radius: 20px;
-  }
-}
-
-
-
-/* Responsividade para iPhone 14 Pro Max (430x932) */
-@media screen and (max-width: 430px) {
-  body, html {
-    background: linear-gradient(to bottom, #192627, #004aad); 
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -2;
-  }
-
-  .center {
-    position: relative;
-    width: 390px;
-    height: 790px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    left: 3px;
-  }
-
-  @property --angle{
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-  }
-  
-  .center::after, .center::before{
-    content: '';
-    position: absolute;
-    width: 397px;
-    height: 797px;
-    background-image: conic-gradient(from var(--angle), transparent 90%, white);
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 10px;
-    border-radius: 15px;
-    animation: 3s spin linear infinite;
-  }
-  .center::before{
-  filter: blur(1.5rem);
-  opacity: 0.5;
-  }
-  
-  @keyframes spin {
-    from{
-      --angle: 0deg;
-    }  
-    to{
-      --angle: 360deg;
-    }
-  }
-
-  .navbar {
-    padding: 6px;
-    flex-direction: row;
-    border-radius: 15px;
-  }
-
-  .accordion {
-    font-size: 16px;
-    padding: 10px;
-  }
-
-  .content {
-    font-size: 16px;
-    padding: 15px;
-  }
-
-  .row {
-    flex-direction: column; /* Alinhar os projetos em uma única coluna */
-    align-items: center; /* Centralizar os itens na coluna */
-  }
-
-  .col {
-    margin-bottom: 20px;
-    width: 100%; /* Certificar que cada projeto ocupe toda a largura disponível */
-  }
-
-  .home-leftSide h3 {
-    font-size: 22px;
-  }
-
-  .home-leftSide button {
-    padding: 12px 24px;
-    font-size: 18px;
-  }
-
-  .home-rightSide {
-    height: auto;
-    width: 100%;
-  }
-
-  .experiencia, .certificates {
-    padding: 25px;
-    overflow-y: auto;
-    max-height: 80vh; /* Limitar a altura para garantir que ambas caibam na tela */
-  }
-
-  .expin, .certificates div {
-    padding: 25px 20px 20px 25px;
-  }
-
-  .infinite-scroll {
-    overflow: hidden;
-    width: 100%;
-  }
-  
-  .infinite-scroll .row {
-    display: flex;
-    width: calc(10 * 200px); /* Ajuste baseado no número de itens e sua largura */
-    animation: scroll 15s linear infinite; /* Ajuste a duração da animação */
-  }
-  
-  .infinite-scroll .row-reverse {
-    display: flex;
-    width: calc(10 * 200px); /* Ajuste baseado no número de itens e sua largura */
-    animation: scroll-reverse 10s linear infinite; /* Animação da direita para esquerda */
-  }
-  
-  .infinite-scroll .col {
-    flex: 0 0 auto;
-    width: 200px; /* Largura de cada item */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  @keyframes scroll {
-    from {
-      transform: translateX(0); /* Começa do início */
-    }
-    to {
-      transform: translateX(calc(-100%)); /* Role por toda a largura */
-    }
-  }
-  
-  @keyframes scroll-reverse {
-    from {
-      transform: translateX(calc(-100%)); /* Começa no final */
-    }
-    to {
-      transform: translateX(0); /* Role de volta para o início */
-    }
-  }
-  
-  .p1 {
-    overflow-x: auto;
-    overflow-y: auto !important;
-  }
-
-  .projetos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-    padding: 15px;
-    box-sizing: border-box;
-  }
-
-  .projetos > div {
-    width: 100%;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
-  }
-
-  .projetos img {
-    width: 100%;
-    max-height: 350px;
-    object-fit: cover;
-    border-radius: 20px;
-  }
-
-  .projetos span {
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-  }
-
-  .projetos button {
-    padding: 12px 24px;
-    font-size: 18px;
-    margin-top: 10px;
-  }
-
-  .profilePhoto {
-    position: relative;
-    width: 100%;
-    height: auto;
-    border-radius: 20px;
-  }
-}
-
-/* Responsividade para iPhone XR (414x896) */
-@media screen and (max-width: 414px) {
-  body, html {
-    background: linear-gradient(to bottom, #192627, #004aad); 
-    height: 860px;
-    min-height: 100%; /* Garantir que o corpo preencha toda a altura */
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -2;
-  }
-
-  .home-leftSide{
-    width: 400px;
-  }
-
-  .center {
-    left: -1px;
-    position: relative;
-    width: 380px;
-    height: 800px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; /* Distribuir o conteúdo igualmente */
-    min-height: 100%; /* Garantir que o conteúdo preencha toda a altura */
-    box-sizing: border-box; /* Incluir padding e borda no cálculo da altura */
-  }
-
-  @property --angle{
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-  }
-  
-  .center::after, .center::before{
-    content: '';
-    position: absolute;
-    width: 385px;
-    height: 805px;
-    background-image: conic-gradient(from var(--angle), transparent 90%, white);
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 10px;
-    border-radius: 15px;
-    animation: 3s spin linear infinite;
-  }
-  .center::before{
-  filter: blur(1.5rem);
-  opacity: 0.5;
-  }
-  
-  @keyframes spin {
-    from{
-      --angle: 0deg;
-    }  
-    to{
-      --angle: 360deg;
-    }
-  }
-
-  .navbar {
-    padding: 6px;
-    flex-direction: row;
-    border-radius: 15px;
-  }
-
-  .accordion {
-    font-size: 16px;
-    padding: 10px;
-  }
-
-  .content {
-    font-size: 16px;
-    padding: 15px;
-  }
-
-  .row {
-    flex-direction: column; /* Alinhar os projetos em uma única coluna */
-    align-items: center; /* Centralizar os itens na coluna */
-  }
-
-  .col {
-    margin-bottom: 20px;
-    width: 100%; /* Certificar que cada projeto ocupe toda a largura disponível */
-  }
-
-  .home-leftSide h3 {
-    font-size: 22px;
-  }
-
-  .home-leftSide button {
-    padding: 12px 24px;
-    font-size: 18px;
-  }
-
-  .home-rightSide {
-    height: auto;
-    width: 100%;
-  }
-
-  .experiencia, .certificates {
-    padding: 25px;
-    overflow-y: auto;
-    max-height: 80vh; /* Limitar a altura para garantir que ambas caibam na tela */
-  }
-
-  .expin, .certificates div {
-    padding: 25px 20px 20px 25px;
-  }
-
-  .infinite-scroll {
-    overflow: hidden;
-    width: 100%;
-  }
-  
-  .infinite-scroll .row {
-    display: flex;
-    width: calc(10 * 200px); /* Ajuste baseado no número de itens e sua largura */
-    animation: scroll 15s linear infinite; /* Ajuste a duração da animação */
-  }
-  
-  .infinite-scroll .row-reverse {
-    display: flex;
-    width: calc(10 * 200px); /* Ajuste baseado no número de itens e sua largura */
-    animation: scroll-reverse 10s linear infinite; /* Animação da direita para esquerda */
-  }
-  
-  .infinite-scroll .col {
-    flex: 0 0 auto;
-    width: 200px; /* Largura de cada item */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  @keyframes scroll {
-    from {
-      transform: translateX(0); /* Começa do início */
-    }
-    to {
-      transform: translateX(calc(-100%)); /* Role por toda a largura */
-    }
-  }
-  
-  @keyframes scroll-reverse {
-    from {
-      transform: translateX(calc(-100%)); /* Começa no final */
-    }
-    to {
-      transform: translateX(0); /* Role de volta para o início */
-    }
-  }
-  
-  .p1 {
-    overflow-x: auto;
-    overflow-y: auto !important;
-  }
-
-  .projetos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-    padding: 15px;
-    box-sizing: border-box;
-  }
-
-  .projetos > div {
-    width: 100%;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
-  }
-
-  .projetos img {
-    width: 100%;
-    max-height: 350px;
-    object-fit: cover;
-    border-radius: 20px;
-  }
-
-  .projetos span {
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-  }
-
-  .projetos button {
-    padding: 12px 24px;
-    font-size: 18px;
-    margin-top: 10px;
-  }
-
-  .profilePhoto {
-    position: relative;
-    width: 100%;
-    height: auto;
-    border-radius: 20px;
-  }
-}
-
-/* Responsividade para iPhone SE (375x667) */
-@media screen and (max-width: 375px) {
-  body, html{
-      background: linear-gradient(to bottom, #192627, #004aad); 
-      width: 100%;
-      height: auto !important;
-      z-index: -2;
-  }
-
-  .center {
-    position: relative;
-    width: 320px;
-    height: 640px;
-    padding: 5px;
-  }
-  
-  @property --angle{
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-  }
-  
-  .center::after, .center::before{
-    content: '';
-    position: absolute;
-    width: 325px;
-    height: 645px;
-    background-image: conic-gradient(from var(--angle), transparent 90%, white);
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 10px;
-    border-radius: 15px;
-    animation: 3s spin linear infinite;
-  }
-  .center::before{
-  filter: blur(1.5rem);
-  opacity: 0.5;
-  }
-  
-  @keyframes spin {
-    from{
-      --angle: 0deg;
-    }  
-    to{
-      --angle: 360deg;
-    }
-  }
-
-
-  .navbar {
-    padding: 5px !important; /* Reduzir o padding */
-    border-radius: 15px;
-  }
-
-  .accordion {
-    font-size: 14px; /* Diminuir o tamanho da fonte */
-    padding: 8px; /* Reduzir o padding */
-  }
-
-  .content {
-    font-size: 14px; /* Diminuir o tamanho da fonte */
-    padding: 10px; /* Adicionar padding interno */
-  }
-
-  .row {
-    flex-direction: column; /* Alterar direção para coluna */
-  }
-
-  .col {
-    margin-bottom: 15px; /* Adicionar espaçamento inferior */
-  }
-
-  .home-leftSide h3 {
-    font-size: 18px; /* Ajustar o tamanho da fonte */
-  }
-
-  .home-leftSide button {
-    padding: 8px 16px; /* Reduzir padding do botão */
-    font-size: 14px; /* Ajustar tamanho da fonte */
-  }
-
-  .home-rightSide {
-    height: auto; /* Deixar a altura automática */
-    width: 100%; /* Ajustar a largura para ocupar todo o espaço disponível */
-  }
-
-  .experiencia {
-    padding: 20px; /* Reduzir padding interno */
-  }
-
-  .expin {
-    padding: 20px 10px 10px 20px; /* Reduzir padding interno */
-  }
-
-  .projetos div {
-    height: auto; /* Deixar a altura automática */
-  }
-
-  .projetos img {
-    width: 300px; /* Ajustar largura da imagem */
-  }
-
-  .projetos span{
-    width: 300px;
-  }
-
-  .projetos button {
-    padding: 8px 16px; /* Reduzir padding do botão */
-    font-size: 14px; /* Ajustar tamanho da fonte */
-  }
-
-  .profilePhoto{
-    position: relative;
-    width: 100%; /* Ajustar a largura para ocupar todo o espaço disponível */
-    height: auto; 
-    border-radius: 15px;
-  }
-
-}
-
-/* Responsividade para iPad Air (820x1180) */
-@media screen and (min-width: 770px) and (max-width: 900px) {
-  body, html {
-    background: linear-gradient(to bottom, #192627, #004aad); 
-    height: 1180px;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -2;
-  }
-
-  .center {
-    position: relative;
-    width: 780px;
-    height: 850px;
-    padding: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    left: 0;
-  }
-
-  .center h1 {
-    height: 130px;
-  }
-
-  @property --angle {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-  }
-
-  .center::after, .center::before {
-    content: '';
-    position: absolute;
-    width: 785px;
-    height: 855px;
-    background-image: conic-gradient(from var(--angle), transparent 90%, white);
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 20px;
-    border-radius: 20px;
-    animation: 3s spin linear infinite;
-  }
-
-  .center::before {
-    filter: blur(1.5rem);
-    opacity: 0.5;
-  }
-
-  @keyframes spin {
-    from {
-      --angle: 0deg;
-    }
-    to {
-      --angle: 360deg;
-    }
-  }
-
-  .navbar {
-    padding: 15px;
-    flex-direction: row;
-    border-radius: 20px;
-  }
-
-  .accordion {
-    font-size: 20px;
-    padding: 20px;
-  }
-
-  .content {
-    font-size: 20px;
-    padding: 25px;
-  }
-
-  .row {
-    align-items: center;
-  }
-
-  .col {
-    margin-bottom: 30px;
-    width: 100%;
-  }
-
-  .home-leftSide h3 {
-    font-size: 26px;
-  }
-
-  .home-leftSide div{
-    width: 140px;
-  }
-
-  .home-leftSide button {
-    padding: 18px 35px;
-    font-size: 22px;
-  }
-
-  .home-rightSide {
-    height: auto;
-    width: 100%;
-  }
-
-  .experiencia, .certificates {
-    padding: 35px;
-    overflow-y: auto;
-    max-height: 65vh;
-  }
-
-  .expin, .certificates div {
-    padding: 35px 30px 30px 35px;
-  }
-
-  .p1 {
-    overflow-x: auto;
-    overflow-y: auto !important;
-  }
-
-  .projetos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-
-  .projetos > div {
-    width: 100%;
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
-  }
-
-  .projetos img {
-    width: 100%;
-    max-height: 380px;
-    object-fit: cover;
-    border-radius: 20px;
-  }
-
-  .projetos span {
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-  }
-
-  .projetos button {
-    padding: 18px 35px;
-    font-size: 22px;
-    margin-top: 20px;
-  }
-
-  .profilePhoto {
-    position: relative;
-    height: auto;
-    border-radius: 20px;
-  }
-}
 .overflow-projetos {
   overflow: auto;
   position: relative;
@@ -1320,4 +422,24 @@ a i.bi {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+}
+
+/* Desativa infinite-scroll e força coluna em iPhones */
+@media screen and (max-width: 430px) {
+  .infinite-scroll {
+    overflow: visible !important;
+    width: 100% !important;
+  }
+  .infinite-scroll .row,
+  .infinite-scroll .row-reverse {
+    display: flex !important;
+    flex-direction: column !important;
+    width: 100% !important;
+    animation: none !important;
+  }
+  .infinite-scroll .col {
+    width: 100% !important;
+    min-width: 0 !important;
+    max-width: 100% !important;
+  }
 }
